# fastapi_tutorial

app/: Makefile  config.py  pyproject.toml  sql_app.db
app/app/: database.py
app/app/persistance/: user_model.py
app/app/util/: logger.py  utils.py
app/core/dto/: user_dto.py
app/core/entity/: user_entity.py
app/core/repository/: user_repository.py
app/core/use_case/: create_user_use_case.py  delete_user_use_case.py  get_user_user_case.py  login_user_use_case.py  update_user_use_case.py
app/core/use_case_output/: __init__.py  failure_type.py
